2002-03-09  Adam Megacz  <adam@xwt.org>
        * java/lang/Win32Process.java (ConcreteProcess): Now throws an
        IOException so that Throwable.printStackTrace fails correctly.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50488 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-09  Adam Megacz  <adam@xwt.org>
+
+        * java/lang/Win32Process.java (ConcreteProcess): Now throws an
+        IOException so that Throwable.printStackTrace fails correctly.
+
 2002-03-08  Adam Megacz  <adam@xwt.org>
 
         * java/net/natPlainSocketImpl.cc (read, write, close): Formatting
