--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar  9 07:47:50 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* gcc.c-torture/compile/20020309-1.c: New test.
+
 2002-03-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/20020307-2.c: New test.
