--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-09  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/rs6000/sysv4.h (BIGGEST_ALIGNMENT): Don't define.
+
 2002-03-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/5877
