* gcc.c (validate_all_switches): Also handle `%W{...}'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50506 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-09  Andreas Schwab  <schwab@suse.de>
+
+	* gcc.c (validate_all_switches): Also handle `%W{...}'.
+
 2002-03-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/5877
