--- a/pch-branch/gcc/ChangeLog
+++ b/pch-branch/gcc/ChangeLog
@@ -184,6 +184,12 @@
 	* integrate.c (expand_inline_function): Adjust.
 
 *** End of pch-branch ChangeLog  ***
+2002-02-19  Zack Weinberg  <zack@codesourcery.com>
+
+	* tree.h (struct tree_common): Remove aux.  Add unused_0 at
+	end of first block of bitfields (which was only seven bits);
+	rename dummy to unused_1; remove comment which is no longer true.
+
 2002-02-11  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.c (mmix_assemble_integer) <case 1, 2>: Handle
