2002-03-09  Adam Megacz  <adam@xwt.org>
        * win32.cc (_Jv_platform_gettimeofday) Cast 1000 to long long to
        avoid precision loss.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50512 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-09  Adam Megacz  <adam@xwt.org>
+
+        * win32.cc (_Jv_platform_gettimeofday) Cast 1000 to long long to
+        avoid precision loss.
+
 2002-03-09  Per Bothner  <per@bothner.com>
 
 	* gnu/gcj/xlib/WindowAttributes.java  Assign null to RawData, not 0.
