2002-03-09  Adam Megacz  <adam@xwt.org>
        * win32.cc (_CRT_MT, __mingwthr_key_dtor) Added fake
        definitions to simulate -mthreads.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50515 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-09  Adam Megacz  <adam@xwt.org>
 
+        * win32.cc (_CRT_MT, __mingwthr_key_dtor) Added fake
+        definitions to simulate -mthreads.
+	
+2002-03-09  Adam Megacz  <adam@xwt.org>
+
         * win32.cc (_Jv_platform_gettimeofday) Cast 1000 to long long to
 	avoid precision loss.
 
