libjava: 	* configure.in: Define SLOW_PTHREAD_SELF if configure.host set 	slow_pthread_self. Set up symlink for sysdeps directory. 	* configure.host: Document more shell variables. Set sysdeps_dir 	for most platforms. Set slow_pthread_self for i686. Set 	enable_hash_synchronization_default and slow_pthread_self for PowerPC. 	* posix-threads.cc (_Jv_ThreadSelf_out_of_line): Use release_set so 	that memory barrier is emitted where required. 	* include/posix-threads.h (_Jv_ThreadSelf for SLOW_PTHREAD_SELF): Add 	read_barrier() to enforce ordering of reads. 	* sysdep/powerpc/locks.h: New file. Implementation of synchronization 	primitives for PowerPC. 	* sysdep/i386/locks.h: New file. Synchronization primitives for i386 	moved from natObject.cc. 	* sysdep/alpha/locks.h: Likewise. 	* sysdep/ia64/locks.h: Likewise. 	* sysdep/generic/locks.h: Likewise. 	* java/lang/natObject.cc: Move thread synchronization primitives to 	system-dependent headers.
gcc/java:
	* decl.c (java_init_decl_processing): Make sure class_type_node
	alignment is not less than 64 bits if hash synchronization is enabled.

boehm-gc:
	* include/gc_priv.h: Define ALIGN_DOUBLE on 32 bit targets if GCJ
	support is enabled, for hash synchronization.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50518 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/java/ChangeLog
+++ b/gcc-3_1-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* decl.c (java_init_decl_processing): Make sure class_type_node
+	alignment is not less than 64 bits if hash synchronization is enabled.
+
 2002-03-08  Per Bothner  <per@bothner.com>
 
 	* parse.y (java_complete_lhs):  Check if patch_assignment
