--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-09  Adam Megacz  <adam@xwt.org>
 
+        * java/io/natFileDescriptorWin32.cc (read): Return -1 if zero
+        bytes read and no failure code returned.
+
+2002-03-09  Adam Megacz  <adam@xwt.org>
+
         * win32.cc (_CRT_MT, __mingwthr_key_dtor) Added fake
         definitions to simulate -mthreads.
 	
