2002-03-09  Adam Megacz  <adam@xwt.org>
        * java/io/natFileDescriptorWin32.cc (read): Return -1 if zero
        bytes read and no failure code returned.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50520 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-09  Adam Megacz  <adam@xwt.org>
+
+        * java/io/natFileDescriptorWin32.cc (read): Return -1 if zero
+	bytes read and no failure code returned.
+
 2002-03-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	Hashtable synchronization for PowerPC.
