--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/awt/ImageMediaEntry: Removed.
+	* java/awt/MediaEntry: Removed.
+
 2002-03-09  Adam Megacz  <adam@xwt.org>
 
         * java/io/natFileDescriptorWin32.cc (read): Return -1 if zero
