--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 10 12:37:42 2002  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* target.c (ffetarget_print_hex): Const-ify.
+
 2002-03-06  Phil Edwards  <pme@gcc.gnu.org>
 
 	* version.c:  Fix misplaced leading blanks on first line.
