* config/mmix/mmix.c: Improve comments. 	(mmix_target_asm_function_prologue): Drop variable 	empty_stack_frame.  Don't allocate unused slot above fp. 	(mmix_target_asm_function_epilogue): Mirror prologue changes. 	* config/mmix/mmix.h (MMIX_GNU_ABI_REG_ALLOC_ORDER): Don't have 	brace in first column. 	(enum reg_class): Ditto. 	(FIRST_PARM_OFFSET): Now 0. 	(USER_LABEL_PREFIX): Remove #if 0:d definition.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50538 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-03-10  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/mmix/mmix.c: Improve comments.
+	(mmix_target_asm_function_prologue): Drop variable
+	empty_stack_frame.  Don't allocate unused slot above fp.
+	(mmix_target_asm_function_epilogue): Mirror prologue changes.
+	* config/mmix/mmix.h (MMIX_GNU_ABI_REG_ALLOC_ORDER): Don't have
+	brace in first column.
+	(enum reg_class): Ditto.
+	(FIRST_PARM_OFFSET): Now 0.
+	(USER_LABEL_PREFIX): Remove #if 0:d definition.
+
 2002-03-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* combine.c (make_extraction): Fix error in last change.
