Fix mingw cross builds
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50540 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-10  Anthony Green  <green@redhat.com>
+
+	* configure.in: Support cross builds to mingw32 target.
+	* configure: Rebuilt.
+
 2002-03-08  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/std/std_limits.h: Move static const data members out of
