--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-03-10  Richard Henderson  <rth@redhat.com>
 
+	* reload.c (copy_replacements_1): New.
+	(copy_replacements): Use it to recurse through the rtx.
+
+2002-03-10  Richard Henderson  <rth@redhat.com>
+
 	* sched-rgn.c (add_branch_dependences): Don't allow insns that throw
 	to move away from the end of the block.
 
