--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-10  Adam Megacz <adam@xwt.org>
+
+	* java/net/natPlainSocketImpl.cc: Added #include <platform.h>.
+
 2002-03-10  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/Win32Process.java: Added comment.
