--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.c-torture/execute/20020227-1.c: New test.
+
 2002-03-09  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/va-arg-22.c: New test.
