2002-03-10  Adam Megacz <adam@xwt.org>
        * java/net/natPlainSocketImpl.cc: Removed #include "posix.h".


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50558 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-10  Adam Megacz <adam@xwt.org>
 
+	* java/net/natPlainSocketImpl.cc: Removed #include "posix.h".
+
+2002-03-10  Adam Megacz <adam@xwt.org>
+
 	* java/net/natPlainSocketImpl.cc: Added #include <platform.h>.
 
 2002-03-10  Tom Tromey  <tromey@redhat.com>
