--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* include/posix.h: Add multiple include header protection.
+	* java/net/natPlainSocketImpl.cc: Don't #include <posix.h>.
+
 2002-03-10  Adam Megacz <adam@xwt.org>
 
         * java/net/natPlainSocketImpl.cc: Added #include <platform.h>.
