* include/posix.h: Add multiple include header protection.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50560 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libjava/ChangeLog
+++ b/gcc-3_1-branch/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* include/posix.h: Add multiple include header protection.
+
 2002-03-10  Adam Megacz <adam@xwt.org>
 
 	* java/net/natPlainSocketImpl.cc: Removed #include "posix.h".
