PR optimization/5844 	* gcc.dg/20020310-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50565 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/5844
+	* gcc.dg/20020310-1.c: New test.
+
 2002-03-11  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gcc.c-torture/execute/20020227-1.c: New test.
