--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -283,6 +283,7 @@ Thu Mar  7 16:33:54 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 2002-03-06  Richard Henderson  <rth@redhat.com>
 
+	PR optimization/5844
 	* genemit.c (gen_exp): New argument used.  Invoke copy_rtx
 	if used indicates we've already emitted one copy of an operand.
 	(gen_insn, gen_expand, output_add_clobbers): Supply a null used.
