--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* config/mmix/mmix.c (mmix_expand_builtin_va_arg): Do all
+	computations on trees.
+
 2002-03-10  Richard Henderson  <rth@redhat.com>
 
 	* reload.c (copy_replacements_1): New.
