--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Douglas B Rupp  <rupp@gnat.com>
+
+	* toplev.c (debug_args): Add entry for VMS_DEBUG.
+	* vmsdbgout.c (vmsdbgout_init): Fix typo in call to xmalloc.
+
 2002-03-10  Richard Henderson  <rth@redhat.com>
 
 	* reload.c (copy_replacements_1): New.
