* config/alpha/alpha.c (alpha_sa_size, VMS): Don't reserve space 	for FP, already done later.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50576 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-03-11  Douglas B Rupp  <rupp@gnat.com>
 
+	* config/alpha/alpha.c (alpha_sa_size, VMS): Don't reserve space
+	for FP, already done later.
+
 	* toplev.c (debug_args): Add entry for VMS_DEBUG.
 	* vmsdbgout.c (vmsdbgout_init): Fix typo in call to xmalloc.
 
