* gcc.c-torture/execute/20020307-1.c: Use long.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50578 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Kazu Hirata  <kazu@hxi.com>
+
+	* gcc.c-torture/execute/20020307-1.c: Use long.
+
 2002-03-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR optimization/5844
