* config/alpha/xm-vms.h (__UNIX_FWRITE): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50579 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-11  Douglas B Rupp  <rupp@gnat.com>
 
+	* config/alpha/xm-vms.h (__UNIX_FWRITE): Define.
+
 	* config/alpha/alpha.c (alpha_sa_size, VMS): Don't reserve space
 	for FP, already done later.
 
