* toplev.c (vms_fopen): Remove, not needed.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50583 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-03-11  Douglas B Rupp  <rupp@gnat.com>
 
+	* toplev.c (vms_fopen): Remove, not needed.
+
 	* vmsdbgout.c (lookup_filename): Adjust creation date for GMT.
 
 	* config/alpha/xm-vms.h (__UNIX_FWRITE): Define.
