--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.h (REG_ALLOC_ORDER): Add missing register.
+
 2002-03-11  Douglas B Rupp  <rupp@gnat.com>
 
 	* toplev.c (vms_fopen): Remove, not needed.
