cp: 	Revert 2000-12-01  Nathan Sidwell  <nathan@codesourcery.com>, 	It is incorrect. 	* typeck.c (build_static_cast): Compare non-qualified types 	with pointer to member conversions. testsuite: 	* testsuite/g++.dg/overload/pmf1.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50591 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	Revert 2000-12-01  Nathan Sidwell  <nathan@codesourcery.com>,
+	It is incorrect.
+	* typeck.c (build_static_cast): Compare non-qualified types
+	with pointer to member conversions.
+
 2002-03-11  Dan Nicolaescu  <dann@ics.uci.edu>
 	    Daniel Berlin  <dan@dberlin.org>
 
