--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* testsuite/g++.dg/overload/pmf1.C: New test.
+
 2002-03-11  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/execute/20020307-1.c: Use long.
