* contrib/texi2pod.pl: Handle @include, @ftable, @vtable. 	Reformat some code for clarity. 	* gcc/Makefile.in: Give texi2pod its input file as a command 	line argument, not on stdin.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50592 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-11  Zack Weinberg  <zack@codesourcery.com>
+
+	* Makefile.in: Give texi2pod its input file as a command line
+	argument, not on stdin.
+
 2002-03-11  Dan Nicolaescu  <dann@ics.uci.edu>
 	    Daniel Berlin  <dan@dberlin.org>
 
