--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-11  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* testsuite/g++.dg/overload/pmf1.C: New test.
+
 2002-03-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR optimization/5844
