cp: 	Revert 2001-03-26  Nathan Sidwell  <nathan@codesourcery.com>, 	DR209 is now not a defect. 	* cp-tree.h (skip_type_access_control): Remove. 	* decl.c (grokdeclarator): Do type access control for friend 	declarations. 	* semantics.c (decl_type_access_control): Don't reset 	current_type_lookups. 	(save_type_access_control): Always save the lookups. 	(skip_type_access_control): Remove. 	(finish_class_definition): Don't change type_lookups. testsuite: 	* testsuite/g++.old-deja/g++.other/friend9.C: Revert DR 209 changes. 	* testsuite/g++.old-deja/g++.robertl/eb56.C: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50595 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,18 @@
 2002-03-11  Nathan Sidwell  <nathan@codesourcery.com>
 
+	Revert 2001-03-26  Nathan Sidwell  <nathan@codesourcery.com>,
+	DR209 is now not a defect.
+	* cp-tree.h (skip_type_access_control): Remove.
+	* decl.c (grokdeclarator): Do type access control for friend
+	declarations.
+	* semantics.c (decl_type_access_control): Don't reset
+	current_type_lookups.
+	(save_type_access_control): Always save the lookups.
+	(skip_type_access_control): Remove.
+	(finish_class_definition): Don't change type_lookups.
+
+2002-03-11  Nathan Sidwell  <nathan@codesourcery.com>
+
 	Revert 2000-12-01  Nathan Sidwell  <nathan@codesourcery.com>,
 	It is incorrect.
 	* typeck.c (build_static_cast): Compare non-qualified types
